--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3"
   }
 }
